# GearRake

./: .gitignore  CMakeLists.txt
docs/: GearRakeDiag.odt
drafts/: ConfigStore.cpp  ConfigStore.h  Message.cpp  Message.h  MessageBroker.cpp  MessageBroker.h  SerialProtocol.cpp  SerialProtocol.h  constants.h  constants_io.cpp  constants_io.h  constants_message.h  gearrake.h.txt  input_output.cpp  input_output.h  interfaces.h  main.cpp  string_constants.h  util.h  wrapper.cpp  wrapper.h
drafts/actions/: Diagnose.cpp  Diagnose.h  FrameDown.cpp  FrameDown.h  HealthChecker.h  Input.cpp  Input.h  Led.cpp  Led.h  Master.cpp  Master.h  Move.cpp  Move.h  Output.cpp  Output.h  Position.cpp  Position.h  Timer.cpp  Timer.h
drafts/actions/auto/: FrameDown.cpp  FrameDown.h  Low.cpp  Low.h  Transport.cpp  Transport.h  Work.cpp  Work.h
drafts/actions/diag/: Diagnose.cpp  Diagnose.h  HealthChecker.cpp
drafts/actions/io/: FailureStorage.cpp  FailureStorage.h  Input.cpp  Input.h  Led.cpp  Led.h  Output.cpp  Output.h  (+2 more)
drafts/cylinders/: Frame.cpp  Frame.h  FrameLock.cpp  FrameLock.h  SpinnerLeft.cpp  SpinnerLeft.h  SpinnerRear.cpp  SpinnerRear.h  SpinnerRight.cpp  SpinnerRight.h  SpinnerTeleLeft.cpp  SpinnerTeleLeft.h  SpinnerTeleRight.cpp  SpinnerTeleRight.h  WeelSteer.cpp  WeelSteer.h  WeelTeleLeft.cpp  WeelTeleLeft.h  WeelTeleRight.cpp  WeelTeleRight.h
libDummys/: Arduino.h
schwader0_2/: .cproject  .gitignore  .project
schwader0_2/src/: .gitignore  Adafruit_MCP23017.cpp  Adafruit_MCP23017.h  Arduino.h  input_output.cpp  input_output.h  logging.cpp  logging.h  schwader0_2.cpp  schwader0_2.ino  task_management.cpp  task_management.h  tasks.cpp  tasks.h  util.h
src/: LiquidCrystal_I2C.h  input_output.cpp  input_output.h  logging.cpp  schwader0_2.cpp  schwader0_2.ino  task_management.cpp  task_management.h  tasks.cpp  tasks.h
test/: MessageGenerator.cpp  MessageGenerator.h  gtest_array_list.cpp  gtest_configstore.cpp  gtest_diagnose.cpp  gtest_frame_down.cpp  gtest_main.cpp  gtest_move.cpp  gtest_serial_protocol.cpp  gtest_timer.cpp  gtest_util.cpp  mocks.cpp  mocks.h  test_tasks.cpp
(+4 files in other folders)
